# checkthat-2025-subject

./: .gitignore  README.md  environment-linux.yml  environment-mac.yml  environment.yml  pyproject.toml  run-classify-openai.py  run-generate_new-openai.py  run-generate_rephrased-openai.py  run_eda_train.py  run_finetune_encoder.py  run_model.py
config/: open-ai.yml  run_config_all-MiniLM-L6-v2_data_2024_local.yml  run_config_all-MiniLM-L6-v2_local.yml  run_config_all-MiniLM-L6-v2_pacmap.yml  run_config_all-MiniLM-L6-v2_umap.yml  run_config_distilemotion_test_local.yml  run_config_emotion_test_local.yml  run_config_modernbert-base.yml  run_config_modernbert-base_local.yml  run_config_modernbert-base_pacmap.yml  run_config_modernbert-base_umap.yml  run_config_modernbert-large_pacmap.yml  run_config_modernbert-large_test_local.yml  run_config_modernbert-large_umap.yml  run_config_modnerbert-base.yml  run_config_roberta-base.yml  run_config_roberta-base_test_local.yml  run_config_sentimentbert.yml  run_config_sentimentbert_data_2024_local.yml  run_config_sentimentbert_local.yml  run_config_sentimentbert_test_local.yml
helper/: logger.py
subjectivity/: 01-eda-train.py  02-finetune-encoder.py  02-generate-train-data-test.py  baseline.py
subjectivity/helper/: data_store.py  inference.py  logger.py  metrics.py  run_config.py  tracking.py  train.py  util.py  visualization.py
subjectivity/models/: dim_red.py  encoder.py  encoder_classifier.py
subjectivity/organizer/: baseline.py  evaluate.py
temp_pace/: contrastive_openai.yml  run_contrastive-fewshot_openai.py
(+7 files in other folders)
