[project]
name = "checkthat-subjectivity"
version = "0.0.1"
authors = [{ name = "Dionne Bang", email = "dbang6@gatech.edu"},
           { name = "Maximilian Heil", email = "mheil7@gmail.edu"}
           ]
description = "DS@GT CheckThat! 2025 Task 1: Subjectivity in News Articles"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/dsgt-kaggle-clef/checkthat-2025-subject"

[tool.poetry]
name = "checkthat-subjectivity"
version = "0.0.1"
description = "Decting Subjectivity in News Articles"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "*"
matplotlib = "*"
scikit-learn = "*"
numpy = "^2.0"
pandas = "*"
polars = "*"
pillow = "*"
pytz = "*"
requests = "*"
safetensors = "*"
scipy = "*"
sentence-transformers = "*"
seaborn = "*"
tokenizers = "*"
tqdm = "*"
tiktoken = "*"
ruff = "*"
peft = "^0.15.1"
transformers = "^4.50.3"
python-terrier = "^0.13.0"
umap-learn = "^0.5.7"
pacmap = "^0.8.0"
huggingface-hub = "^0.30.1"
openai = "^1.70.0"
python-dotenv = "^1.1.0"
wandb = "^0.19.9"
xlsxwriter = "^3.2.3"
langchain = "*"
tensorflow = "^2.16.0"
tf-keras = "^2.19.0"
hf-xet = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
